// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
<DocumentFragment>
  <div
    data-testid="location-display"
  >
    /login
  </div>
  <h1
    data-testid="login"
  >
    You are at the login page
  </h1>
</DocumentFragment>
`;

exports[`wildcard routes + nested 1`] = `
<DocumentFragment>
  <div
    data-testid="location-display"
  >
    /users/blah/test1
  </div>
  <h1>
    inside userRoot
  </h1>
  <h1
    data-testid="users"
  >
    You are user test1
  </h1>
</DocumentFragment>
`;
